:bug: bug(forms.scss): Fixed bug where input z-index is greater than the glyph

--- a/src/core/forms.scss
+++ b/src/core/forms.scss
@@ -16,7 +16,7 @@
     transition: all 0.3s;
     outline: none;
     padding: 0.85rem 1.1rem;
-    z-index: 10;
+    z-index: 1;
 
     /* Input Field Sizes */
     &.input-xsmall,
